RESOLVED FIXED237143
Fix debug build of WorkQueueGeneric after r290418
https://bugs.webkit.org/show_bug.cgi?id=237143
Summary Fix debug build of WorkQueueGeneric after r290418
Don Olmstead
Reported 2022-02-24 09:44:49 PST
Signature of WorkQueue::assertIsCurrent is wrong there
Attachments
[fast-cq] Patch (1.18 KB, patch)
2022-02-24 09:50 PST, Don Olmstead
ews-feeder: commit-queue-
Don Olmstead
Comment 1 2022-02-24 09:50:23 PST
Created attachment 453111 [details] [fast-cq] Patch
EWS
Comment 2 2022-02-24 09:57:11 PST
Committed r290440 (247743@main): <https://commits.webkit.org/247743@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453111 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-24 09:58:23 PST
Note You need to log in before you can comment on or make changes to this bug.