Fix debug build of WorkQueueGeneric after r290418 https://bugs.webkit.org/show_bug.cgi?id=237143

Unreviewed build fix.

Correct the method signature of WorkQueue::assertIsCurrent in WorkQueueGeneric.cpp.


* wtf/generic/WorkQueueGeneric.cpp:
(WTF::WorkQueue::assertIsCurrent const):
(WTF::WorkQueue::assertIsCurrent): Deleted.



Canonical link: https://commits.webkit.org/247743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290440 268f45cc-cd09-0410-ab3c-d52691b4dbfc